AC_INIT(main.c)
PACKAGE=iplogin2
VERSION=2.2.11
AC_PREFIX_DEFAULT(/opt/iplogin2)
AC_CONFIG_HEADER(autoconfig.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PACKAGE, "$PACKAGE")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PACKAGE)
AC_SUBST(VERSION)

dnl Checks for programs.
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_LIBTOOL_DLOPEN
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_PROG_RANLIB
AC_CHECK_TOOL(AR, ar, :)
AC_CHECK_TOOL(STRIP, strip, :)
AC_PROG_LN_S

dnl --with-libwrap
libwrappath="/usr"

AC_ARG_WITH(libwrap,
[  --with-libwrap=DIR      Use libwrap and point out the parent to include/tcpd.h and lib/libwrap.a],
[case "$withval" in
        no)     libwrappath=""
                ;;
        yes)
                ;;
        *)
                libwrappath="$withval"
                ;;
esac
])dnl

AC_SUBST(libwrappath)dnl

if test ! -z "$libwrappath"; then
	if test "$libwrappath" != "/usr"; then
	        CFLAGS="$CFLAGS -I$libwrappath/include"
	        CPPFLAGS="$CPPFLAGS -I$libwrappath/include"
	        LDFLAGS="$LDFLAGS -L$libwrappath/lib"
	fi
	
	AC_CHECK_HEADER(tcpd.h,[
		AC_CHECK_LIB(wrap,main, ,AC_MSG_RESULT(********* No libwrap.a found: not using libwrap))],
		HAVE_LIBWRAP=;AC_MSG_RESULT(********* No tcpd.h found: not using libwrap))
else
	AC_MSG_RESULT(********* Not using libwrap)
fi

dnl --with-iptables-sources

iptspath=
for p in `ls -1d 2>/dev/null ./iptables-* ../iptables-* | sort -t/ +1`
do
	if test -f $p/Makefile; then iptspath=$p; fi
done

AC_ARG_WITH(iptables-sources,
[  --with-iptables-sources=DIR      point out where the sources for iptables (>=1.2.5) are located],
[case "$withval" in
        no) iptspath=""
                ;;
        yes)
                ;;
        *)
                iptspath=`echo $withval | sed 's/\/$//'`
                ;;
esac
])dnl

if test ! -z "$iptspath"; then
	CFLAGS="$CFLAGS -I$iptspath/include"
	CPPFLAGS="$CPPFLAGS -I$iptspath/include"
	IPTVERSION=`grep "_VERSION:=" $iptspath/Makefile | grep -v OLD | cut -d= -f2-`
	if test -z "$IPTVERSION"; then AC_MSG_ERROR($iptspath contains no version of iptables that I recognize); fi
	AC_MSG_RESULT(************** Using iptables version $IPTVERSION in $iptspath);
	AC_SUBST(IPTVERSION)
else
	AC_MSG_ERROR([I don't know where the iptables sources are. I need them!])
fi

AC_SUBST(iptspath)dnl

dnl Checks for libraries.
AC_CHECK_LIB(resolv,main)
AC_CHECK_LIB(dl,main, ,AC_MSG_RESULT([************ No dynloader (libdl.a) found - disabling accounting]))

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(\
	arpa/inet.h\
	asm/types.h\
	ctype.h\
	dlfcn.h\
	errno.h\
	fcntl.h\
	iplogin2.h\
	iptables.h\
	limits.h\
	linux/sockios.h\
	netdb.h\
	netinet/in.h\
	netinet/ip.h\
	netinet/ip_icmp.h\
	pwd.h\
	signal.h\
	stdarg.h\
	stdio.h\
	sys/ioctl.h\
	sys/socket.h\
	sys/time.h\
	sys/timeb.h\
	sys/uio.h\
	sys/wait.h\
	syslog.h\
	time.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_LIBRARY_NET

##AC_CHECK_FUNCS()

AC_OUTPUT(Makefile)
