AC_INIT(hlcrypt.c)
PRODUCT=libhl.a
VERSION=1.0
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

AC_CHECK_HEADER(openssl/sha.h, ,[opensslpath="/usr/local/ssl"])

dnl Checks for header files.
dnl --with-openssl

AC_ARG_WITH(openssl,
[  --with-openssl=DIR      point out where OpenSSL is installed],
[case "$withval" in
        no) opensslpath=""
		dontusessl=1
                ;;
        yes)
                ;;
        /*|\\*)
                opensslpath="$withval"
                ;;
        *)
                opensslpath="/$withval"
                ;;
esac
])dnl

AC_SUBST(opensslpath)dnl

if test ! -z "$opensslpath"; then
        CFLAGS="$CFLAGS -I$opensslpath/include"
        CPPFLAGS="$CPPFLAGS -I$opensslpath/include"
        LDFLAGS="$LDFLAGS -L$opensslpath/lib"
fi

if test "x$dontusessl" != "x1" ; then
	AC_LIBRARY_CRYPTO
fi

AC_HEADER_STDC
AC_CHECK_HEADERS(\
	arpa/inet.h\
	ctype.h\
	errno.h\
	netdb.h\
	netinet/in.h\
	openssl/sha.h\
	stdio.h\
	stdlib.h\
	string.h\
	sys/socket.h\
	sys/stat.h\
	sys/time.h\
	syslog.h\
	time.h\
	unistd.h
)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_LIBRARY_NET

##AC_CHECK_FUNCS()

AC_OUTPUT(Makefile)
