AC_INIT(hlcrypt.c)
PRODUCT=libhl.a
VERSION=1.0
AC_CONFIG_HEADER(config.h)
AC_PROG_CC
AC_DEFINE_UNQUOTED(PRODUCT, "$PRODUCT")
AC_DEFINE_UNQUOTED(VERSION, "$VERSION")
AC_SUBST(PRODUCT)
AC_SUBST(VERSION)

dnl Checks for programs.
AC_PROG_CC
if test $CC = "gcc"; then
	CFLAGS="$CFLAGS -Wall"
fi
AC_PROG_INSTALL
AC_PROG_LN_S

dnl Checks for libraries.

AC_HEADER_STDC
AC_CHECK_HEADERS(\
	arpa/inet.h\
	ctype.h\
	errno.h\
	netdb.h\
	netinet/in.h\
	stdio.h\
	stdlib.h\
	string.h\
	sys/socket.h\
	sys/stat.h\
	sys/time.h\
	syslog.h\
	time.h\
	unistd.h, ,AC_MSG_ERROR([Missing header file]))

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST

dnl Checks for library functions.
AC_TYPE_SIGNAL
AC_LIBRARY_NET

##AC_CHECK_FUNCS()

AC_OUTPUT(Makefile)
